--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,7 @@
     tools:context=".SignupActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/mainlogo2"
         android:layout_width="wrap_content"
         android:layout_height="320dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/mainlogo2" />
 
     <EditText
         android:id="@+id/signup_passwordtext"
@@ -57,7 +57,7 @@
         app:layout_constraintTop_toBottomOf="@+id/signup_passwordtext" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signup_button_signup"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
